# GraphColoring

./: CMakeLists.txt  ReadME.md  graphcoloring.cpp  graphcoloring.h  input.xml  input2.xml  main.cpp  xmlparser.cpp  xmlparser.h
